<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="GVL_settings" Id="{75164956-e9b2-45d0-8fa5-a4a426e4cb3d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	

App_Velocity : REAL;
App_Acceleration : REAL;
App_CoordSys : COORDSYS;
App_GroupIndex :INT:=1;
App_BufferMode :INT :=2;
App_APO :APO ;
App_ToolNumber :INT;


//app_coordsys.BASE:=1;
//app_coordsys.TOOL:=1;
//app_coordsys.IPO_Mode:=0;


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>